Added RoudingMode to all

--- a/NodaMoney/NodaMoney.csproj
+++ b/NodaMoney/NodaMoney.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Extensions\MoneyExtensions.SaveDivide.cs" />
     <Compile Include="InvalidCurrencyException.cs" />
     <Compile Include="Money.cs" />
+    <Compile Include="Money.FourMostUsedCurrencies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
