--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,13 +57,13 @@ notifications:
 - provider: Email
   to:
   - main@nodamoney.flowdock.com
-  on_build_success: true
+  on_build_success: false
   on_build_failure: true
   on_build_status_changed: true
 - provider: Slack
   auth_token:
     secure: jhC+/1OwjVll6PTQLyyYTxb0oouvf83oOYxp40ZLnMrmNhU9Las0wwIQY64+JJIa
   channel: general
-  on_build_success: true
+  on_build_success: false
   on_build_failure: true
   on_build_status_changed: true
