--- a/NodaMoney.UnitTests/NodaMoney.UnitTests.csproj
+++ b/NodaMoney.UnitTests/NodaMoney.UnitTests.csproj
@@ -87,6 +87,10 @@
     <Compile Include="CurrencyTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\NodaMoney.Serialization.AspNet\NodaMoney.Serialization.AspNet.csproj">
+      <Project>{4D77971D-49FB-451A-A1D5-E92285291DC2}</Project>
+      <Name>NodaMoney.Serialization.AspNet</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NodaMoney\NodaMoney.csproj">
       <Project>{1814e8de-0e75-4e23-9f70-e039ac816b42}</Project>
       <Name>NodaMoney</Name>
