--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,8 @@ build:
 after_build:
 - copy NodaMoney\bin\Release\NodaMoney.dll
 - copy NodaMoney\bin\Release\NodaMoney.pdb
-- 7z a -tzip NodaMoney.zip README.md LICENSE.txt NodaMoney.dll NodaMoney.pdb
+- copy NodaMoney\bin\Release\NodaMoney.xml
+- 7z a -tzip NodaMoney.zip README.md LICENSE.txt NodaMoney.dll NodaMoney.pdb NodaMoney.xml
 
 #---------------------------------#
 #      artifacts configuration    #
@@ -41,7 +42,7 @@ deploy:
   artifact: NodaMoney.zip
   draft: true
   on:
-    branch: master
+    branch: '\d*\.\d*\.\d*'
 
 - provider: NuGet
   server: https://staging.nuget.org/
@@ -49,7 +50,7 @@ deploy:
     secure: 3CaDEZjsLpJrX6c6pIMJBKWrOEyRTbvCwrXX4P8dgOgiu4IHEsaaqVxqVCADp5nv
   skip_symbols: true
   on:
-    branch: master
+    branch: '\d*\.\d*\.\d*'
 
 #---------------------------------#
 #         notifications           #
