--- a/NodaMoney/NodaMoney.csproj
+++ b/NodaMoney/NodaMoney.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Money.Comparable.cs" />
     <Compile Include="Money.Convertible.cs" />
     <Compile Include="Money.cs" />
+    <Compile Include="Money.Parsable.cs" />
     <Compile Include="Money.Formattable.cs" />
     <Compile Include="Money.FourMostUsedCurrencies.cs" />
     <Compile Include="Money.UnaryOperators.cs" />
