--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,8 @@ version: '{build}-{branch}'
 #---------------------------------#
 #    environment configuration    #
 #---------------------------------#
+COVERALLS_REPO_TOKEN:
+    secure: Pn67B/ELnBY8YWJUBE4s4oIx98wS5NRLTOrP7AP/EiuU2l9brndSCF2cPL6+JUBe
 cache:
   - packages -> **\packages.config
 
@@ -30,6 +32,11 @@ after_build:
 - copy NodaMoney\bin\Release\NodaMoney.pdb
 - copy NodaMoney\bin\Release\NodaMoney.xml
 - 7z a -tzip NodaMoney.zip README.md LICENSE.txt NodaMoney.dll NodaMoney.pdb NodaMoney.xml
+
+after_test:
+- packages\OpenCover.4.5.3723\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:NodaMoney.UnitTests/bin/Release/NodaMoney.UnitTests.dll" -output:coverage.xml
+- packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+
 
 #---------------------------------#
 #      artifacts configuration    #
