--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ before_build:
 - GitVersion /output buildserver /updateAssemblyInfo SolutionInfo.cs
 
 build:
+  project: NodaMoney.sln
   publish_nuget: true  # package projects with .nuspec files and push to artifacts
   verbosity: minimal
 
