--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,9 +33,9 @@ after_build:
 - copy NodaMoney\bin\Release\NodaMoney.xml
 - 7z a -tzip NodaMoney.zip README.md LICENSE.txt NodaMoney.dll NodaMoney.pdb NodaMoney.xml
 
-after_test:
+test_script:
 - packages\OpenCover.4.5.3723\OpenCover.Console.exe -register:user -filter:"+[NodaMoney*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:NodaMoney.UnitTests/bin/Release/NodaMoney.UnitTests.dll" -output:coverage.xml
-- packages\coveralls.io.1.3.4\tools\coveralls.net.exe --debug --opencover coverage.xml
+- packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 
 
 #---------------------------------#
