--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,8 +34,10 @@ after_build:
 - 7z a -tzip NodaMoney.zip README.md LICENSE.txt NodaMoney.dll NodaMoney.pdb NodaMoney.xml
 
 test_script:
-- packages\OpenCover.4.5.3723\OpenCover.Console.exe -register:user -filter:"+[NodaMoney*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:NodaMoney.UnitTests/bin/Release/NodaMoney.UnitTests.dll" -output:coverage.xml
-- packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+- ps: >-
+    iex ((Get-ChildItem ('packages\OpenCover'))[0].FullName + 'OpenCover.Console.exe -register:user -filter:"+[NodaMoney*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:NodaMoney.UnitTests/bin/Release/NodaMoney.UnitTests.dll" -output:coverage.xml')
+
+    iex ((Get-ChildItem ('packages\coveralls.io'))[0].FullName + 'tools\coveralls.net.exe --opencover coverage.xml')
 
 
 #---------------------------------#
