--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,9 +35,9 @@ after_build:
 
 test_script:
 - ps: >-
-    iex ((Get-ChildItem ('packages\OpenCover'))[0].FullName + 'OpenCover.Console.exe -register:user -filter:"+[NodaMoney*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:NodaMoney.UnitTests/bin/Release/NodaMoney.UnitTests.dll" -output:coverage.xml')
-
-    iex ((Get-ChildItem ('packages\coveralls.io'))[0].FullName + 'tools\coveralls.net.exe --opencover coverage.xml')
+    iex ((Resolve-Path "packages\OpenCover.*\OpenCover.Console.exe").ToString() + ' --% -register:user -filter:"+[NodaMoney*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:NodaMoney.UnitTests/bin/Release/NodaMoney.UnitTests.dll" -output:coverage.xml')
+	
+    iex ((Resolve-Path "packages\coveralls.io.*\tools\coveralls.net.exe").ToString() + ' --opencover coverage.xml')
 
 
 #---------------------------------#
