Starting with #8, Added CurrencyBuilder class and first test

--- a/NodaMoney.UnitTests/NodaMoney.UnitTests.csproj
+++ b/NodaMoney.UnitTests/NodaMoney.UnitTests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Helpers\SwitchCulture.cs" />
     <Compile Include="ExchangeRateTests.cs" />
     <Compile Include="CurrencyTests.cs" />
+    <Compile Include="CurrencyBuilderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NodaMoney.Serialization.AspNet\NodaMoney.Serialization.AspNet.csproj">
