Implement CurrencyBuilder methods and added tests

--- a/NodaMoney.Serialization.AspNet/NodaMoney.Serialization.AspNet.csproj
+++ b/NodaMoney.Serialization.AspNet/NodaMoney.Serialization.AspNet.csproj
@@ -47,15 +47,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml">
-      <Link>Properties\CodeAnalysisDictionary.xml</Link>
-    </CodeAnalysisDictionary>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\NodaMoney\NodaMoney.csproj">
       <Project>{1814E8DE-0E75-4E23-9F70-E039AC816B42}</Project>
       <Name>NodaMoney</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
+      <Link>Properties\CustomDictionary.xml</Link>
+    </CodeAnalysisDictionary>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
