--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@
 #      general configuration      #
 #---------------------------------#
 version: '{build}-{branch}'
+os: Visual Studio 2015 RC
 
 #---------------------------------#
 #    environment configuration    #
@@ -19,6 +20,7 @@ nuget:
   disable_publish_on_pr: true
 
 before_build:
+- set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
 - nuget restore
 - GitVersion /output buildserver /updateAssemblyInfo SolutionInfo.cs
 
