--- a/NodaMoney/NodaMoney.csproj
+++ b/NodaMoney/NodaMoney.csproj
@@ -49,7 +49,7 @@
     </Compile>
     <Compile Include="Currency.cs" />
     <Compile Include="CurrencyBuilder.cs" />
-    <Compile Include="CurrencyNamespace.cs" />
+    <Compile Include="CurrencyRegistry.cs" />
     <Compile Include="ExchangeRate.cs" />
     <Compile Include="Extensions\MoneyExtensions.SaveDivide.cs" />
     <Compile Include="GlobalSuppressions.cs" />
@@ -74,6 +74,9 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\portable-net45+wp80+win8+wpa81+aspnetcore50\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Collections.Concurrent">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETPortable\v4.5\System.Collections.Concurrent.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
