--- a/NodaMoney/NodaMoney.csproj
+++ b/NodaMoney/NodaMoney.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Money.FourMostUsedCurrencies.cs" />
     <Compile Include="Money.UnaryOperators.cs" />
     <Compile Include="Money.Serializable.cs" />
+    <Compile Include="NoExchangeRateQuoteFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\JsonNet\MoneyJsonConverter.cs" />
   </ItemGroup>
