--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,10 +19,13 @@ configuration: Release
 nuget:
   disable_publish_on_pr: true
 
+install:
+  - choco install gitversion.portable -pre -y
+  
 before_build:
 - set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
 - nuget restore
-- GitVersion /output buildserver /updateAssemblyInfo SolutionInfo.cs
+- ps: gitversion /l console /output buildserver /updateAssemblyInfo SolutionInfo.cs
 
 build:
   project: NodaMoney.sln
@@ -73,16 +76,9 @@ deploy:
 #         notifications           #
 #---------------------------------#
 notifications:
-- provider: Email
-  to:
-  - main@nodamoney.flowdock.com
-  on_build_success: true
-  on_build_failure: true
-  on_build_status_changed: true
 - provider: Slack
-  auth_token:
-    secure: jhC+/1OwjVll6PTQLyyYTxb0oouvf83oOYxp40ZLnMrmNhU9Las0wwIQY64+JJIa
-  channel: general
+  incoming_webhook:
+    secure: HzeM1/SGr4DgedFcdh1D17XdOCLKRG81irFVeMPTC5rg7O/WRFm0xEIJgOs92wb7UrOqQIe4dWujPHAVC8mCcmMPZ/U4dYDwvCUC6Jkltxc=
   on_build_success: true
   on_build_failure: true
   on_build_status_changed: true
