--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="coveralls.io" version="1.3.4" />
-  <package id="OpenCover" version="4.5.3723" />
+  <package id="coveralls.net" version="0.6.0" />
+  <package id="OpenCover" version="4.6.519" />
 </packages>
