--- a/NodaMoney.Serialization.AspNet/NodaMoney.Serialization.AspNet.csproj
+++ b/NodaMoney.Serialization.AspNet/NodaMoney.Serialization.AspNet.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SolutionInfo.cs">
-      <Link>Properties\SolutionInfo.cs</Link>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MoneyJavaScriptConverter.cs" />
