--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,8 @@ os: Visual Studio 2015 RC
 environment:
   COVERALLS_REPO_TOKEN:
     secure: Pn67B/ELnBY8YWJUBE4s4oIx98wS5NRLTOrP7AP/EiuU2l9brndSCF2cPL6+JUBe
+  NUGET_API_KEY:
+    secure: cJV4lINlVi8J4NOZBAS5GnaaugKWWO0Zi5jCSKfkDOgs5mEpPDjIf9K0D8hB4bTU
 
 #---------------------------------#
 #       build configuration       #
@@ -18,38 +20,17 @@ configuration: Release
 
 nuget:
   disable_publish_on_pr: true
-
-install:
-  - choco install gitversion.portable -pre -y
-  
-before_build:
-- set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
-- nuget restore
-- ps: gitversion /l console /output buildserver /updateAssemblyInfo SolutionInfo.cs
-
-build:
-  project: NodaMoney.sln
-  publish_nuget: true  # package projects with .nuspec files and push to artifacts
-  verbosity: minimal
-
-after_build:
-- copy NodaMoney\bin\Release\NodaMoney.dll
-- copy NodaMoney\bin\Release\NodaMoney.pdb
-- copy NodaMoney\bin\Release\NodaMoney.xml
-- 7z a -tzip NodaMoney.zip README.md LICENSE.txt NodaMoney.dll NodaMoney.pdb NodaMoney.xml
-
-test_script:
-- ps: >-
-    iex ((Resolve-Path "packages\OpenCover.*\OpenCover.Console.exe").ToString() + ' --% -register:user -filter:"+[NodaMoney*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:NodaMoney.UnitTests/bin/Release/NodaMoney.UnitTests.dll" -output:coverage.xml')
-
-    iex ((Resolve-Path "packages\coveralls.io.*\tools\coveralls.net.exe").ToString() + ' --opencover coverage.xml')
-
+ 
+build_script:
+  - ps: .\Build\psake.ps1
+ 
+test: off
 
 #---------------------------------#
 #      artifacts configuration    #
 #---------------------------------#
 artifacts:
-- path: NodaMoney.zip
+- path: .\Artifacts\*
 
 #---------------------------------#
 #     deployment configuration    #
