--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ nuget:
   disable_publish_on_pr: true
  
 build_script:
-  - ps: .\Build\psake.ps1 .\Build\default.ps1
+  - ps: .\Build\psake.ps1 .\Build\default.ps1; if ($psake.build_success -eq $false) { exit 1 } else { exit 0 }
  
 test: off
 
