Enable PushCoverage, Fix StyleCop issues

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,7 @@ deploy:
     appveyor_repo_tag: true
 
 - provider: NuGet
-  server: https://staging.nuget.org/
+  server: https://www.nuget.org/
   api_key:
     secure: cJV4lINlVi8J4NOZBAS5GnaaugKWWO0Zi5jCSKfkDOgs5mEpPDjIf9K0D8hB4bTU
   skip_symbols: true
