Update tools to subfolders, Added build.cmd in root, Add NuGet.config

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,7 @@ nuget:
   disable_publish_on_pr: true
  
 build_script:
-  - cd .\Build
-  - psake.cmd DefaultAndCoveralls
+  - build.cmd DefaultAndCoveralls
  
 test: off
 
