--- a/src/NodaMoney/packages.config
+++ b/src/NodaMoney/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="StyleCop.MSBuild" version="4.7.53.0" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
 </packages>
