--- a/tests/NodaMoney.Tests/NodaMoney.Tests.csproj
+++ b/tests/NodaMoney.Tests/NodaMoney.Tests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NodaMoney.Tests</RootNamespace>
     <AssemblyName>NodaMoney.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -76,6 +77,7 @@
     <Compile Include="Helpers\UseCultureAttribute.cs" />
     <Compile Include="Helpers\RenderSpecs.cs" />
     <Compile Include="MoneyBinaryOperatorsSpec.cs" />
+    <Compile Include="MoneyCalculationsSpec.cs" />
     <Compile Include="MoneyComparableSpec.cs" />
     <Compile Include="MoneyConvertibleSpec.cs" />
     <Compile Include="MoneyFormattableSpec.cs" />
@@ -90,13 +92,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\NodaMoney\NodaMoney.csproj">
-      <Project>{1814e8de-0e75-4e23-9f70-e039ac816b42}</Project>
-      <Name>NodaMoney</Name>
-    </ProjectReference>
+    <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="readme.txt" />
+    <ProjectReference Include="..\..\src\NodaMoney\NodaMoney.xproj">
+      <Project>{58F0FE5E-E139-4ABF-B9A5-969DBBE69F52}</Project>
+      <Name>NodaMoney</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
