--- a/src/NodaMoney.Serialization.AspNet/project.lock.json
+++ b/src/NodaMoney.Serialization.AspNet/project.lock.json
@@ -15,7 +15,7 @@
           "lib/net40/Newtonsoft.Json.dll": {}
         }
       },
-      "NodaMoney/1.0.0": {
+      "NodaMoney/0.6.1-dotnet0001": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.0",
         "dependencies": {
@@ -420,7 +420,7 @@
           "lib/net45/_._": {}
         }
       },
-      "NodaMoney/1.0.0": {
+      "NodaMoney/0.6.1-dotnet0001": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5",
         "dependencies": {
@@ -2489,7 +2489,7 @@
         "ref/xamarinwatchos10/_._"
       ]
     },
-    "NodaMoney/1.0.0": {
+    "NodaMoney/0.6.1-dotnet0001": {
       "type": "project",
       "path": "../NodaMoney/project.json",
       "msbuildProject": "../NodaMoney/NodaMoney.xproj"
