--- a/src/NodaMoney/project.json
+++ b/src/NodaMoney/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.7.0-*",
+  "version": "0.6.1-dotnet0001",
   "title": "NodaMoney",
   "description": "NodaMoney provides a library that treats Money as a first class citizen and handles all the ugly bits like currencies and formatting.",
   "language": "en-US",
